--- a/OurNewProject/appsettings.json
+++ b/OurNewProject/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OurNewProjectContext": "Server=(localdb)\\mssqllocaldb;Database=OurNewProjectContext-b70ac600-ce32-4942-a0c6-f4ab334fab86;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
