--- a/OurNewProject/appsettings.json
+++ b/OurNewProject/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OurNewProjectContext": "Server=(localdb)\\mssqllocaldb;Database=OurNewProjectContext-b70ac600-ce32-4942-a0c6-f4ab334fab86;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "OurNewProjectContext": "Server=db.cs.colman.ac.il;User Id = csizei;password=Patrick@Cs51;Database=izei;MultipleActiveResultSets=true"
   }
+
 }
