--- a/OurNewProject/OurNewProject.csproj
+++ b/OurNewProject/OurNewProject.csproj
@@ -12,6 +12,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Home\BeerS.cshtml" />
+    <None Include="Views\Home\Eilat.cshtml" />
+    <None Include="Views\Home\Hyadata.cshtml" />
+    <None Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Home\Jerusalem.cshtml" />
+    <None Include="Views\Home\Mevasseret.cshtml" />
+    <None Include="Views\Home\Privacy.cshtml" />
+    <None Include="Views\Home\RG.cshtml" />
+    <None Include="Views\Home\Rishon.cshtml" />
+    <None Include="Views\Home\Shoam.cshtml" />
+    <None Include="Views\Home\TA.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
       <PrivateAssets>all</PrivateAssets>
