יום שישי ואני כאן

--- a/OurNewProject/OurNewProject.csproj
+++ b/OurNewProject/OurNewProject.csproj
@@ -17,11 +17,11 @@
     <None Include="Views\Home\Hyadata.cshtml" />
     <None Include="Views\Home\Index.cshtml" />
     <None Include="Views\Home\Jerusalem.cshtml" />
-    <None Include="Views\Home\Mevasseret.cshtml" />
+    <None Include="Views\Home\About.cshtml" />
     <None Include="Views\Home\Privacy.cshtml" />
     <None Include="Views\Home\RG.cshtml" />
     <None Include="Views\Home\Rishon.cshtml" />
-    <None Include="Views\Home\Shoam.cshtml" />
+    <None Include="Views\Home\Gallery.cshtml" />
     <None Include="Views\Home\Team.cshtml" />
   </ItemGroup>
 
